# otfft-conan

./: .gitignore  LICENSE  README.md  benchmark_results.txt  conanfile.py  local_test.py
benchmark/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  file  perf_comparison.cpp
example/: CMakeLists.txt  conanfile.txt  main.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test.cpp
